# nixos-config

./: .README.md.kate-swp  .gitignore  .gitmodules  README.md  flake.nix  plymouth-test
arch/x86_64/: default.nix
arch/x86_64-linux/: default.nix
base/: default.nix
base/agenix/: default.nix  secrets.nix
base/auto-upgrade/: auto-upgrade  default.nix
base/caddy/: default.nix
base/display_manager/: default.nix
base/distrobox/: default.nix
base/docker/: README.md  default.nix
base/fcitx5/: default.nix
base/font/: default.nix
base/gnome-disks/: default.nix
base/gnome-keyring/: default.nix
base/gnupg/: default.nix
base/gparted/: default.nix
base/hd-idle/: README.md  default.nix
base/home-manager/: default.nix
base/hyprland/: default.nix
base/i3/: default.nix
base/kdiskmark/: default.nix
base/keyd/: default.nix
base/locale/: default.nix
base/maomaowm/: default.nix
base/networking/: default.nix
base/nix/: default.nix
base/nixpkgs/: default.nix
base/obs-studio/: README.md  default.nix
base/openssh/: default.nix
base/overlay/: default.nix
base/partition-manager/: default.nix
disko/: mount-image.sh  qemu-shell.sh  qemu.nix  result
generator/: default.nix  sd-image.nix
nixos/: default.nix
original/: configuration.nix  hardware-configuration.nix
overlay/: default.nix
package/terminal/: .gitignore  flake.nix  pyproject.toml  setup.py  terminal
package/terminal_emulator/: README.md  alacritty.sh  flake.nix  pyproject.toml  setup.py  terminal_emulator
secrets/: default.nix  secrets.nix
user/: default.nix
(+464 files in other folders)
