[build-system]
requires = ['setuptools>=45', 'wheel']

[project]
name = 'terminal'
version = '1.0'
readme = 'README.md'
license = { text = 'MIT License' }
authors = [{ name = 'Inoue Hiroo', email = 'ultrahiroo2000@gmail.com' }]
requires-python = '>=3.11'

# [project.scripts]
# terminal = 'terminal'
