[build-system]
requires = ['setuptools>=45', 'wheel']

[project]
name = 'terminal_emulator'
readme = 'README.md'
license = { text = 'MIT License' }
authors = [{ name = 'Inoue Hiroo', email = 'ultrahiroo2000@gmail.com' }]
dynamic = ['version']
requires-python = '>=3.11'

# [project.scripts]
# terminal_emulator = 'terminal_emulator'
